dev/istio/04-authorization-public.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: come2us-public-access
  namespace: come2us
spec:
  rules:
    - to:
        - operation:
            paths:
              - "/actuator/*"
              - "/members/*"
              - "/auth/*"
              - "/products/*"
              - "/stores/*"
              - "/carts/*"
              - "/delivery-policies/*"
              - "/reviews/*"
              - "/discounts/*"
              - "/categories/*"
              - "/payments/*"
              - "/orders/*"
              - "/refunds/*"
              - "/coupons/*"
              - "/address/*"
