dev/istio/05-authorization-master.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: come2us-master-access
  namespace: come2us
spec:
  rules:
    - when:
        - key: request.auth.claims[authority]
          values:
            - "ROLE_MASTER"
