dev/istio/06-authorization-manager.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: come2us-manager-access
  namespace: come2us
spec:
  rules:
    - when:
        - key: request.auth.claims[authority]
          values:
            - "ROLE_MANAGER"
