dev/istio/07-authorization-customer.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: come2us-customer-access
  namespace: come2us
spec:
  rules:
    - when:
        - key: request.auth.claims[authority]
          values:
            - "ROLE_CUSTOMER"
